# finam_trade_terminal

./: .gitignore  CMakeLists.txt  README.md  base_client.hpp  base_reactor.hpp  base_strategy.cpp  base_strategy.hpp  get_time.hpp  locale_bool.hpp  main.cpp  ssl_socket.hpp  tcp_socket.hpp  test_strategy.cpp  test_strategy.hpp  time.hpp  trade_terminal.kdev4  transaq_client.cpp  transaq_client.h  transaq_client.hpp  transaq_loader_stub.cpp  transaq_loader_win.cpp  transaq_terminal.kdev4  transaq_wrapper.cpp  transaq_wrapper.hpp  types.hpp
.kdev4/: trade_terminal.kdev4  transaq_terminal.kdev4
install/: .gitignore  start.sh
vcproj/trade_terminal/: .gitignore  trade_terminal.sln  trade_terminal.vcxproj  trade_terminal.vcxproj.filters
vcproj/transaq_terminal/: .gitignore  transaq_terminal.sln  transaq_terminal.vcxproj  transaq_terminal.vcxproj.filters
